Fixed menu disappearing behind slider

--- a/App_Themes/MyTheme/Styles.css
+++ b/App_Themes/MyTheme/Styles.css
@@ -76,7 +76,7 @@ body {
 }
 
 #mnu_1 {
-    z-index:1;
+    z-index:5;
     position:absolute;
 }
 
