--- a/Styles/nivo-slider.css
+++ b/Styles/nivo-slider.css
@@ -37,7 +37,7 @@
 	border:0;
 	padding:0;
 	margin:0;
-	z-index:6;
+	z-index:4;
 	display:none;
 	background:white; 
 	filter:alpha(opacity=0); 
